# darkmark

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
darkmark/: __about__.py  __init__.py  __main__.py  darkmark.py  replacer.py
darkmark/cli/: __init__.py  common.py
tests/: test_me.py
